[package]
name = "rust-pocket-tetris"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# coffee = { version = "0.4.1", features = ["opengl"] }
minifb = "0.19.3"
rand = "0.8"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3